--- a/git_3/index.html
+++ b/git_3/index.html
@@ -6,6 +6,7 @@
     <title>esercizio</title>
   </head>
   <body>
+    <h1>Esercizio 3</h1>
     <p>tetso di esempio</p>
     <ul>
       <li>Shao</li>
